--- a/WebContent/register1.html
+++ b/WebContent/register1.html
@@ -3,22 +3,84 @@
 <head>
 <meta charset="UTF-8">
 <title>账号注册</title>
+
+<!-- 引入JQuery -->
+<script type="text/javascript" src="jquery-easyui/jquery.min.js"></script>
+<!-- 引入EasyUI -->
+<script type="text/javascript" src="jquery-easyui/jquery.easyui.min.js"></script>
+<!-- 引入EasyUI的中文国际化js，让EasyUI支持中文 -->
+<script type="text/javascript" src="jquery-easyui/locale/easyui-lang-zh_CN.js"></script>
+<!-- 引入EasyUI的样式文件-->
+<link rel="stylesheet" href="jquery-easyui/themes/default/easyui.css" type="text/css"/>
+<!-- 引入EasyUI的图标样式文件-->
+<link rel="stylesheet" href="jquery-easyui/themes/icon.css" type="text/css"/>
+
 </head>
 <body>
-	<form action="/owner/register.do" method="post">
-		<table>
+
+	<form action="owner/register.do" method="post" onsubmit="return checkForm()">
+		<table border="1">
 			<tr>
-				<td>编号</td>
-				<td>：<input type="text" id="ono" value="注意！编号确定后无法改变!" onfocus="value=''"/></td>
+				<td>账号</td>
+				<td>：<input type="text" id="ono" name="ono" value="注意！账号确定后无法改变!" onfocus="value=''"/></td>
 			</tr>
 			<tr>
 			    <td>姓名</td>
-			    <td>：<input type="text" id="oname" /></td>
+			    <td>：<input type="text" id="oname" name="oname" /></td>
 			</tr>
+			<tr>
+			    <td>密码</td>
+			    <td>：<input type="password" id="pw1" name="password" /></td>
+			</tr>
+			<tr>
+                <td>再次确认</td>
+                <td>：<input type="password" id="pw2" name="password1" onblur="check()"/></td>
+            </tr>
+			<tr>
+                <td>性别</td>
+                <td>：<input type="text" id="sex" name="sex" /></td>
+            </tr>
+            <tr>
+                <td>联系电话</td>
+                <td>：<input type="text" id="phone" name="phone" /></td>
+            </tr>
+            <tr>
+                <td colspan="2"><input type="submit" value="注册" ></td>
+            </tr>
 		</table>
 	</form>
 
 	<script type="text/javascript">
+	   function check()
+	   {
+		   var pw1 = document.getElementById("pw1").value;
+		   var pw2 = document.getElementById("pw2").value;
+		   if(pw1 != pw2)
+		   {
+			   alert("两次密码不一致！请重新输入");
+			   document.getElementById("pw1").value="";
+			   document.getElementById("pw2").value="";
+			   return false;
+		   }
+		   return true;
+	   }
+	   
+	   function checkForm()
+	   {
+		   var ono = document.getElementById("ono").value;
+		   var pw1 = document.getElementById("pw1").value;
+		   var pw2 = document.getElementById("pw2").value;
+		   var oname = document.getElementById("oname").value;
+		   var sex = document.getElementById("sex").value;
+		   var phone = document.getElementById("phone").value;
+		   if(ono==null || ono=="注意！编号确定后无法改变!" || oname==null ||
+				   pw1==null || pw2==null || sex ==null || phone==null)
+		   {
+			   alert("请填写完整！");
+			   return false;
+		   }
+		   return true;
+	   }
 	   
 	</script>
 </body>
